# trace

./: .env.example  .gitignore  README.md  pyproject.toml
tracectf/: cli.py
tracectf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tracectf/modules/: discovery.py  fingerprint.py  js_analysis.py  summarize.py
tracectf/utils/: output.py
