[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracectf"
version = "0.1.0"
description = "CTF-scoped web recon pipeline"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "anthropic>=0.28",
    "beautifulsoup4>=4.12",
]

[project.scripts]
trace = "tracectf.cli:app"

[tool.setuptools.packages.find]
where = ["."]
